--- a/app/privacy-policy.html
+++ b/app/privacy-policy.html
@@ -35,7 +35,7 @@
   <!--build:css css/styles.min.css-->
   <link rel="stylesheet" href="css/main.css">
   <!--endbuild-->
-  <link rel="shortcut icon" type="image/png" href="./images/Icon/favicon-16x16.png" />
+  <link rel="shortcut icon" type="image/png" href="./images/icon/favicon-16x16.png" />
 </head>
 
 <body>
@@ -227,7 +227,7 @@
   </main>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.js"></script>
-  <script src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js'></script>
+  <script src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js'></script>
   <!--build:js js/main.min.js -->
   <script src='js/lib/glide.min.js'></script>
   <script src="js/main.js"></script>
