cookies banner + home page fix

--- a/app/index.html
+++ b/app/index.html
@@ -88,13 +88,15 @@
         <div class="about-content">
           <img class="about__mobile-img" src="images/aboutus-bg-mobile.svg" alt="about-us mobile tech graphics">
           <p class="about-content-text">
-            Focus on one domain — Machine Generated Data
-            We provide <a href="#technology" class="about-content-text__link">Data Science</a>
-            <span>,</span>
-            <a href="#technology" class="about-content-text__link">Data Engineering</a>and
-            <a href="#technology" class="about-content-text__link">Embedded development</a> services to yield value from
-            data:
-            OPEX improvement, uptime, decisions quality.
+            Focus on one domain — Machine Generated Data.
+            <span class="about-content-text__part">
+              We provide <a href="#technology" class="about-content-text__link">Data Science</a>
+              <span class="coma">,</span>
+              <a href="#technology" class="about-content-text__link">Data Engineering</a> and
+              <a href="#technology" class="about-content-text__link">Embedded development</a> services to yield value from
+              data:
+              OPEX improvement, uptime, decisions quality.
+            </span>
           </p>
           <a href="./about-us.html" class="about-content__link blue-link read_more_button">Read more about us</a>
         </div>
