--- a/app/index.html
+++ b/app/index.html
@@ -93,7 +93,8 @@
               We provide <a href="#technology" class="about-content-text__link">Data Science</a>
               <span class="coma">,</span>
               <a href="#technology" class="about-content-text__link">Data Engineering</a> and
-              <a href="#technology" class="about-content-text__link">Embedded development</a> services to yield value from
+              <a href="#technology" class="about-content-text__link">Embedded development</a> services to yield value
+              from
               data:
               OPEX improvement, uptime, decisions quality.
             </span>
@@ -299,9 +300,8 @@
               <div class="form-textarea-box">
                 <textarea id="formmessage" name="m" id="message-textarea" cols="30" rows="3"
                   placeholder="Message"></textarea>
-                <input type="submit" name="submit_message" class="form-textarea-box__btn send_button" id="submit-button"
-                  soul="index-form" value="Send" onclick="ArsModule.submitForm(event)">
-                <!-- <input id="mybtn" type="submit" value="Submit Form"> -->
+                <button type="submit" name="submit_message" class="form-textarea-box__btn send_button"
+                  id="submit-button" soul="index-form" value="Send" onclick="ArsModule.submitForm(event)">Send</button>
               </div>
 
               <div class="form-radio-box">
