--- a/app/privacy-policy.html
+++ b/app/privacy-policy.html
@@ -92,16 +92,18 @@
             <div class="policy-content-paragraph">
               <ul class="policy-content-paragraph-list policy-content-paragraph-list_mb">
                 <li class="policy-content-paragraph-list__item">
-                  When you fill in the contact form, found in the "Let's talk" section.
+                  <span>When you fill in the contact form, found in the "Let's talk" section.</span>
                 </li>
                 <li class="policy-content-paragraph-list__item">
-                  When you use or view our website via your browser’s cookies. (please see
-                  <a href="./cookie-policy.html" class="policy-content-email__mail">Cookie policy</a>
-                  for details)
+                  <span>When you use or view our website via your browser’s cookies. (please see
+                    <a href="./cookie-policy.html" class="policy-content-email__mail">Cookie policy</a>
+                    for details)
+                  </span>
                 </li>
                 <li class="policy-content-paragraph-list__item">
-                  When you share documents or files delivered via emails or by sending personal messages directly to our
-                  representatives.
+                  <span>When you share documents or files delivered via emails or by sending personal messages directly
+                    to our
+                    representatives.</span>
                 </li>
               </ul>
             </div>
@@ -110,10 +112,10 @@
                 following sources:</h3>
               <ul class="policy-content-paragraph-list policy-content-paragraph-list_mb">
                 <li class="policy-content-paragraph-list__item">
-                  Open sources, like public websites or social media
+                  <span>Open sources, like public websites or social media</span>
                 </li>
                 <li class="policy-content-paragraph-list__item">
-                  3rd parties like recruiting agencies
+                  <span>3rd parties like recruiting agencies</span>
                 </li>
               </ul>
             </div>
@@ -126,10 +128,10 @@
             <div class="policy-content-paragraph">
               <ul class="policy-content-paragraph-list policy-content-paragraph-list_mb">
                 <li class="policy-content-paragraph-list__item">
-                  Respond to any requests you submit through our contact forms ("Let's talk" section).
+                  <span>Respond to any requests you submit through our contact forms ("Let's talk" section).</span>
                 </li>
                 <li class="policy-content-paragraph-list__item">
-                  Email you with special offers on other products and services we think you might like.
+                  <span>Email you with special offers on other products and services we think you might like.</span>
                 </li>
               </ul>
               <p class="policy-content-paragraph__text policy-content__text_small">
