--- a/app/solutions.html
+++ b/app/solutions.html
@@ -114,7 +114,7 @@
                   </p>
                 </div>
                 <div class="slide-content slide-content-2">
-                  <img class="slide-content__img slide-content__img_small"
+                  <img class="slide-content__img"
                     src="./images/illustrations/sensor-data-processing.svg"
                     alt="Predictive Maintenance illustration downgrade graphic with limit line">
                 </div>
@@ -247,9 +247,8 @@
             
               <div class="form-textarea-box">
                 <textarea id="formmessage" name="m" id="message-textarea" cols="30" rows="3" placeholder="Message"></textarea>
-                <input type="submit" name="submit_message" class="form-textarea-box__btn send_button" id="submit-button"
-                  soul="index-form" value="Send" onclick="ArsModule.submitForm(event)">
-                <!-- <input id="mybtn" type="submit" value="Submit Form"> -->
+                <button type="submit" name="submit_message" class="form-textarea-box__btn send_button" id="submit-button"
+                  soul="index-form" value="Send" onclick="ArsModule.submitForm(event)">Send</button>
               </div>
             
               <div class="form-radio-box">
