--- a/app/terms-and-conditions.html
+++ b/app/terms-and-conditions.html
@@ -98,7 +98,7 @@
               <h3 class="policy-content-paragraph__title">Access to the Site</h3>
               <ul class="policy-content-paragraph-list">
                 <li class="policy-content-paragraph-list__item policy-content-paragraph-list__item_title">
-                  Subject to these Terms
+                  <span>Subject to these Terms</span>
                   <p class="policy-content__text policy-content__text_small">
                     Company grants you a non-transferable, non - exclusive, revocable, limited license to access the
                     Site solely for your
@@ -106,7 +106,7 @@
                   </p>
                 </li>
                 <li class="policy-content-paragraph-list__item policy-content-paragraph-list__item_title">
-                  Certain Restrictions
+                  <span>Certain Restrictions</span>
                   <p class="policy-content__text policy-content__text_small">
                     The rights approved to you in these Terms are subject to the following restrictions: (a) you shall
                     not sell, rent,
@@ -133,7 +133,7 @@
                   </p>
                 </li>
                 <li class="policy-content-paragraph-list__item policy-content-paragraph-list__item_title">
-                  No Support or Maintenance
+                  <span>No Support or Maintenance</span>
                   <p class="policy-content__text policy-content__text_small">
                     You agree that Company will have no obligation to provide you with any support in connection with
                     the Site.
@@ -156,7 +156,7 @@
               <h3 class="policy-content-paragraph__title">Third-Party Links & Ads; Other Users</h3>
               <ul class="policy-content-paragraph-list">
                 <li class="policy-content-paragraph-list__item policy-content-paragraph-list__item_title">
-                  Third-Party Links & Ads
+                  <span>Third-Party Links & Ads</span>
                   <p class="policy-content__text policy-content__text_small">
                     The Site may contain links to third - party websites and services, and/or display advertisements for
                     third-parties. 
@@ -174,7 +174,7 @@
                   </p>
                 </li>
                 <li class="policy-content-paragraph-list__item policy-content-paragraph-list__item_title">
-                  Other Users
+                  <span>Other Users</span>
                   <p class="policy-content__text policy-content__text_small">
                     Each Site user is solely responsible for any and all of its own User Content.  Because we do not
                     control User Content,
@@ -202,7 +202,7 @@
                   </p>
                 </li>
                 <li class="policy-content-paragraph-list__item policy-content-paragraph-list__item_title">
-                  Cookies and Web Beacons
+                  <span>Cookies and Web Beacons</span>
                   <p class="policy-content__text policy-content__text_small">
                     Like any other website, www.arsdata.io uses ‘cookies’. These cookies are used to store information
                     including visitors’
@@ -266,7 +266,7 @@
             <div class="policy-content-paragraph">
               <ul class="policy-content-paragraph-list">
                 <li class="policy-content-paragraph-list__item policy-content-paragraph-list__item_title">
-                  Term and Termination
+                  <span>Term and Termination</span>
                   <p class="policy-content__text policy-content__text_small">
                     Subject to this Section, these Terms will remain in full force and effect while you use the Site. 
                     We may suspend or
@@ -308,32 +308,33 @@
             <div class="policy-content-paragraph">
               <ul class="policy-content-paragraph-list policy-content-paragraph-list_mb">
                 <li class="policy-content-paragraph-list__item">
-                  Your physical or electronic signature;
+                  <span>Your physical or electronic signature;</span>
                 </li>
                 <li class="policy-content-paragraph-list__item">
-                  Identification of the copyrighted work(s) that you claim to have been infringed;
+                  <span>Identification of the copyrighted work(s) that you claim to have been infringed;</span>
                 </li>
                 <li class="policy-content-paragraph-list__item">
-                  Identification of the material on our services that you claim is infringing and that you request us to
-                  remove;
+                  <span>Identification of the material on our services that you claim is infringing and that you request
+                    us to
+                    remove;</span>
                 </li>
                 <li class="policy-content-paragraph-list__item">
-                  Sufficient information to permit us to locate such material;
+                  <span>Sufficient information to permit us to locate such material;</span>
                 </li>
                 <li class="policy-content-paragraph-list__item">
-                  Your address, telephone number, and e-mail address;
+                  <span>Your address, telephone number, and e-mail address;</span>
                 </li>
                 <li class="policy-content-paragraph-list__item">
-                  A statement that you have a good faith belief that use of the objectionable material is not authorized
+                  <span>A statement that you have a good faith belief that use of the objectionable material is not authorized
                   by the
-                  copyright owner, its agent, or under the law;
+                  copyright owner, its agent, or under the law;</span>
                 </li>
                 <li class="policy-content-paragraph-list__item">
-                  A statement that the information in the notification is accurate, and under penalty of perjury, that
+                  <span>A statement that the information in the notification is accurate, and under penalty of perjury, that
                   you are either
                   the owner of the copyright that has allegedly been infringed or that you are authorized to act on
                   behalf of the
-                  copyright owner.
+                  copyright owner.</span>
                 </li>
               </ul>
               <p class="policy-content-paragraph__text">
@@ -373,7 +374,7 @@
             <div class="policy-content-paragraph policy-content-paragraph_small">
               <ul class="policy-content-paragraph-list">
                 <li class="policy-content-paragraph-list__item policy-content-paragraph-list__item_title">
-                  Electronic Communications
+                  <span>Electronic Communications</span>
                   <p class="policy-content__text policy-content__text_small">
                     The communications between you and Company use electronic means, whether you use the Site or send us
                     emails, or whether
@@ -391,7 +392,7 @@
             <div class="policy-content-paragraph policy-content-paragraph_small">
               <ul class="policy-content-paragraph-list">
                 <li class="policy-content-paragraph-list__item policy-content-paragraph-list__item_title">
-                  Entire Terms
+                  <span>Entire Terms</span>
                   <p class="policy-content__text policy-content__text_small">
                     These Terms constitute the entire agreement between you and us regarding the use of the Site. Our
                     failure to exercise or
@@ -421,7 +422,7 @@
             <div class="policy-content-paragraph policy-content-paragraph_big">
               <ul class="policy-content-paragraph-list">
                 <li class="policy-content-paragraph-list__item policy-content-paragraph-list__item_title">
-                  Copyright/Trademark Information
+                  <span>Copyright/Trademark Information</span>
                   <p class="policy-content__text policy-content__text_small">
                     Copyright ©. All rights reserved.  All trademarks, logos and service marks displayed on the Site are
                     our property or the
