--- a/app/cookie-policy.html
+++ b/app/cookie-policy.html
@@ -105,14 +105,14 @@
               <h3 class="policy-content-paragraph__title">The Cookies We Set</h3>
               <ul class="policy-content-paragraph-list">
                 <li class="policy-content-paragraph-list__item">
-                  Site preferences cookies.
+                  <span>Site preferences cookies.</span>
                 </li>
                 <li class="policy-content-paragraph-list__item">
-                  In order to provide you with a great experience on this site we provide the functionality to set your
+                  <span>In order to provide you with a great experience on this site we provide the functionality to set your
                   preferences for
                   how this site runs when you use it. In order to remember your preferences we need to set cookies so
                   that this
-                  information can be called whenever you interact with a page is affected by your preferences.
+                  information can be called whenever you interact with a page is affected by your preferences.</span>
                 </li>
               </ul>
             </div>
@@ -137,16 +137,16 @@
               </p>
               <ul class="policy-content-paragraph-list">
                 <li class="policy-content-paragraph-list__item">
-                  This site uses Google Analytics which is one of the most widespread and trusted analytics solution on
+                  <span>This site uses Google Analytics which is one of the most widespread and trusted analytics solution on
                   the web for
                   helping us to understand how you use the site and ways that we can improve your experience. These
                   cookies may track
                   things such as how long you spend on the site and the pages that you visit so we can continue to
                   produce engaging
-                  content.
+                  content.</span>
                 </li>
                 <li class="policy-content-paragraph-list__item">
-                  For more information on Google Analytics cookies, see the official Google Analytics page.
+                  <span>For more information on Google Analytics cookies, see the official Google Analytics page.</span>
                 </li>
               </ul>
             </div>
