--- a/app/technologies.html
+++ b/app/technologies.html
@@ -202,9 +202,8 @@
             
               <div class="form-textarea-box">
                 <textarea id="formmessage" name="m" id="message-textarea" cols="30" rows="3" placeholder="Message"></textarea>
-                <input type="submit" name="submit_message" class="form-textarea-box__btn send_button" id="submit-button"
-                  soul="index-form" value="Send" onclick="ArsModule.submitForm(event)">
-                <!-- <input id="mybtn" type="submit" value="Submit Form"> -->
+                <button type="submit" name="submit_message" class="form-textarea-box__btn send_button" id="submit-button"
+                  soul="index-form" value="Send" onclick="ArsModule.submitForm(event)">Send</button>
               </div>
             
               <div class="form-radio-box">
