mobile layout fixes

--- a/app/about-us.html
+++ b/app/about-us.html
@@ -36,6 +36,7 @@
   <link rel="stylesheet" href="css/main.css">
   <!--endbuild-->
   <link rel="shortcut icon" type="image/png" href="./images/icon/favicon-16x16.png" />
+  <link rel="apple-touch-icon" href="./images/icon/favicon-16x16.png">
 </head>
 
 <body>
@@ -60,7 +61,7 @@
           <img src="images/logos/logo-white.svg" alt="ARS Data logo" class="navigation-desktop__logo">
           <a class="navigation-desktop__item nav-about_button" href="./about-us.html">About us</a>
           <a class="navigation-desktop__item nav-solutions_button" href="./solutions.html">Solutions</a>
-          <a class="navigation-desktop__item nav-technology_button" href="./technologies.html">Technologies</a>
+          <a class="navigation-desktop__item nav-technology_button" href="./technologies.html">Technology</a>
           <a class="navigation-desktop__item nav-contact_button" href="#contact">Contact</a>
         </div>
       </nav>
@@ -169,6 +170,16 @@
       </div>
     </footer>
   </main>
+
+  <div id="cookies-popup" style='display:none' class="cookies-popup flex-between">
+    <p class="cookies-popup-text">
+      We use cookies to improve your experience with our site, including analytics and personalisation.
+      By continuing to use the service, you agree to our use of cookies as described in the
+      <a href="./cookie-policy.html" target="_blanc" class="cookies-popup-text__link">Cookie Policy</a>.
+    </p>
+    <button type="button" class="home__startbtn blue-link"
+      onClick="ArsModule.handleCookiesPopUp('hide')">accept</button>
+  </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.js"></script>
   <script src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js'></script>
