--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,7 @@
   <!-- <link rel="stylesheet" href="css/var.css"> -->
   <!--endbuild-->
   <link rel="shortcut icon" type="image/png" href="./images/icon/favicon-16x16.png" />
+  <link rel="apple-touch-icon" href="./images/icon/favicon-16x16.png">
 </head>
 
 <body>
@@ -341,7 +342,7 @@
     <p class="cookies-popup-text">
       We use cookies to improve your experience with our site, including analytics and personalisation.
       By continuing to use the service, you agree to our use of cookies as described in the
-      <a target="_blanc" class="cookies-popup-text__link">Cookie Policy</a>.
+      <a href="./cookie-policy.html" target="_blanc" class="cookies-popup-text__link">Cookie Policy</a>.
     </p>
     <button type="button" class="home__startbtn blue-link"
       onClick="ArsModule.handleCookiesPopUp('hide')">accept</button>
