--- a/app/contacts.html
+++ b/app/contacts.html
@@ -36,6 +36,7 @@
   <link rel="stylesheet" href="css/main.css">
   <!--endbuild-->
   <link rel="shortcut icon" type="image/png" href="./images/icon/favicon-16x16.png" />
+  <link rel="apple-touch-icon" href="./images/icon/favicon-16x16.png">
 </head>
 
 <body>
@@ -43,7 +44,7 @@
     Website doesn't work when JavaScript disabled. Please enable JavaScript
   </noscript>
 
-  <img class="contact-page-bg" src="./images/illustrations/contact-page-bg-img.svg" alt="">
+  <!-- <img class="contact-page-bg" src="./images/illustrations/contact-page-bg-img.svg" alt=""> -->
 
   <header class="header">
     <div class="container flex-between">
@@ -62,7 +63,7 @@
           <img src="images/logos/logo-white.svg" alt="ARS Data logo" class="navigation-desktop__logo">
           <a class="navigation-desktop__item" href="./about-us.html">About us</a>
           <a class="navigation-desktop__item" href="./solutions.html">Solutions</a>
-          <a class="navigation-desktop__item" href="./technologies.html">Technologies</a>
+          <a class="navigation-desktop__item" href="./technologies.html">Technology</a>
           <a class="navigation-desktop__item" href="./contacts.html">Contact</a>
         </div>
       </nav>
@@ -94,8 +95,7 @@
             </div>
 
             <div class="form-input-box">
-              <input id="formemail" name="e" type="email" class="form-input-box__input" placeholder="Email"
-                required>
+              <input id="formemail" name="e" type="email" class="form-input-box__input" placeholder="Email" required>
               <label for="e" id="formEmailLable" class="form-input-box__lable"></label>
             </div>
 
@@ -129,6 +129,16 @@
     </section>
 
   </main>
+
+  <div id="cookies-popup" style='display:none' class="cookies-popup flex-between">
+    <p class="cookies-popup-text">
+      We use cookies to improve your experience with our site, including analytics and personalisation.
+      By continuing to use the service, you agree to our use of cookies as described in the
+      <a href="./cookie-policy.html" target="_blanc" class="cookies-popup-text__link">Cookie Policy</a>.
+    </p>
+    <button type="button" class="home__startbtn blue-link"
+      onClick="ArsModule.handleCookiesPopUp('hide')">accept</button>
+  </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.js"></script>
   <script src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js'></script>
