--- a/app/cookie-policy.html
+++ b/app/cookie-policy.html
@@ -36,6 +36,7 @@
   <link rel="stylesheet" href="css/main.css">
   <!--endbuild-->
   <link rel="shortcut icon" type="image/png" href="./images/icon/favicon-16x16.png" />
+  <link rel="apple-touch-icon" href="./images/icon/favicon-16x16.png">
 </head>
 
 <body>
@@ -57,7 +58,7 @@
           <img src="images/logos/logo-white.svg" alt="ARS Data logo" class="navigation-desktop__logo">
           <a class="navigation-desktop__item" href="./about-us.html">About us</a>
           <a class="navigation-desktop__item" href="./solutions.html">Solutions</a>
-          <a class="navigation-desktop__item" href="./technologies.html">Technologies</a>
+          <a class="navigation-desktop__item" href="./technologies.html">Technology</a>
           <a class="navigation-desktop__item" href="./contacts.html">Contact</a>
         </div>
       </nav>
@@ -108,11 +109,12 @@
                   <span>Site preferences cookies.</span>
                 </li>
                 <li class="policy-content-paragraph-list__item">
-                  <span>In order to provide you with a great experience on this site we provide the functionality to set your
-                  preferences for
-                  how this site runs when you use it. In order to remember your preferences we need to set cookies so
-                  that this
-                  information can be called whenever you interact with a page is affected by your preferences.</span>
+                  <span>In order to provide you with a great experience on this site we provide the functionality to set
+                    your
+                    preferences for
+                    how this site runs when you use it. In order to remember your preferences we need to set cookies so
+                    that this
+                    information can be called whenever you interact with a page is affected by your preferences.</span>
                 </li>
               </ul>
             </div>
@@ -137,13 +139,14 @@
               </p>
               <ul class="policy-content-paragraph-list">
                 <li class="policy-content-paragraph-list__item">
-                  <span>This site uses Google Analytics which is one of the most widespread and trusted analytics solution on
-                  the web for
-                  helping us to understand how you use the site and ways that we can improve your experience. These
-                  cookies may track
-                  things such as how long you spend on the site and the pages that you visit so we can continue to
-                  produce engaging
-                  content.</span>
+                  <span>This site uses Google Analytics which is one of the most widespread and trusted analytics
+                    solution on
+                    the web for
+                    helping us to understand how you use the site and ways that we can improve your experience. These
+                    cookies may track
+                    things such as how long you spend on the site and the pages that you visit so we can continue to
+                    produce engaging
+                    content.</span>
                 </li>
                 <li class="policy-content-paragraph-list__item">
                   <span>For more information on Google Analytics cookies, see the official Google Analytics page.</span>
@@ -176,6 +179,16 @@
     </section>
 
   </main>
+
+  <div id="cookies-popup" style='display:none' class="cookies-popup flex-between">
+    <p class="cookies-popup-text">
+      We use cookies to improve your experience with our site, including analytics and personalisation.
+      By continuing to use the service, you agree to our use of cookies as described in the
+      <a href="./cookie-policy.html" target="_blanc" class="cookies-popup-text__link">Cookie Policy</a>.
+    </p>
+    <button type="button" class="home__startbtn blue-link"
+      onClick="ArsModule.handleCookiesPopUp('hide')">accept</button>
+  </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.js"></script>
   <script src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js'></script>
