arrow buttons animation + main nav animation slover

--- a/app/about-us.html
+++ b/app/about-us.html
@@ -89,7 +89,11 @@
             Systems based on data will allow to make a step change
             <span>in OPEX improvement, uptime, situational awareness and decisions quality.</span>
           </p>
-          <a href="./contacts.html" class="home__startbtn blue-link start_project_button">Start the project</a>
+          <a href="./contacts.html" class="home__startbtn blue-link start_project_button">
+            <div class="blue-link-arrow__top-part"></div>
+            <div class="blue-link-arrow__bottom-part"></div>
+            Start the project
+          </a>
         </div>
       </div>
     </section>
