--- a/app/contacts.html
+++ b/app/contacts.html
@@ -105,8 +105,11 @@
                 placeholder="Message"></textarea>
               <div class="flex-between">
                 <button type="submit" name="submit_message" class="home__startbtn blue-link contact-page-submit-button"
-                  id="submit-button" soul="contacts-form" onclick="ArsModule.submitForm(event)">Send
-                  message</button>
+                  id="submit-button" soul="contacts-form" onclick="ArsModule.submitForm(event)">
+                  <div class="blue-link-arrow__top-part"></div>
+                  <div class="blue-link-arrow__bottom-part"></div>
+                  Send message
+                </button>
                 <span class="home__startbtn blue-link form-success-text send_message_button">Send message</span>
                 <span class="home__startbtn blue-link form-error-text">Your message wasn’t sent</span>
               </div>
