--- a/app/index.html
+++ b/app/index.html
@@ -79,7 +79,11 @@
           <span class="home-text__part-2">for Machine Generated </span>
           <span class="home-text__part-3">Data & Industrial IoT</span>
         </p>
-        <a href="./contacts.html" class="home__startbtn blue-link start_project_button">Start the project</a>
+        <a href="./contacts.html" class="home__startbtn blue-link start_project_button">
+          <div class="blue-link-arrow__top-part"></div>
+          <div class="blue-link-arrow__bottom-part"></div>
+          Start the project
+        </a>
         <img class="home__mobile-img" src="images/home-bg-mobile.svg" alt="home mobile tech graphics">
       </div>
     </section>
@@ -100,7 +104,11 @@
               OPEX improvement, uptime, decisions quality.
             </span>
           </p>
-          <a href="./about-us.html" class="about-content__link blue-link read_more_button">Read more about us</a>
+          <a href="./about-us.html" class="about-content__link blue-link read_more_button">
+            <div class="blue-link-arrow__top-part"></div>
+            <div class="blue-link-arrow__bottom-part"></div>
+            Read more about us
+          </a>
         </div>
       </div>
     </section>
@@ -155,7 +163,11 @@
                 <span>health of equipment</span>
                 <span>or an asset</span>
               </p>
-              <p class="solutions-grid-item__link blue-link">Read more</p>
+              <span class="solutions-grid-item__link blue-link">
+                <div class="blue-link-arrow__top-part"></div>
+                <div class="blue-link-arrow__bottom-part"></div>
+                Read more
+              </span>
             </a>
             <a id="condition_monitoring_button" href="./solutions.html#1" class="solutions-grid-item">
               <p class="solutions-grid-item__caption">Condition Monitoring</p>
@@ -163,7 +175,11 @@
                 <span>Get current equipment</span>
                 <span>health</span>
               </p>
-              <p class="solutions-grid-item__link blue-link">Read more</p>
+              <span class="solutions-grid-item__link blue-link">
+                <div class="blue-link-arrow__top-part"></div>
+                <div class="blue-link-arrow__bottom-part"></div>
+                Read more
+              </span>
             </a>
             <a id="sensor_data_button" href="./solutions.html#2" class="solutions-grid-item">
               <p class="solutions-grid-item__caption">Sensor data processing</p>
@@ -171,7 +187,11 @@
                 <span>Handle different</span>
                 <span>types of sensor data</span>
               </p>
-              <p class="solutions-grid-item__link blue-link">Read more</p>
+              <span class="solutions-grid-item__link blue-link">
+                <div class="blue-link-arrow__top-part"></div>
+                <div class="blue-link-arrow__bottom-part"></div>
+                Read more
+              </span>
             </a>
             <a id="hvac_button" href="./solutions.html#3" class="solutions-grid-item">
               <p class="solutions-grid-item__caption">Smart HVAC</p>
@@ -180,7 +200,11 @@
                 <span>footprint of the</span>
                 <span>building</span>
               </p>
-              <p class="solutions-grid-item__link blue-link">Read more</p>
+              <span class="solutions-grid-item__link blue-link">
+                <div class="blue-link-arrow__top-part"></div>
+                <div class="blue-link-arrow__bottom-part"></div>
+                Read more
+              </span>
             </a>
           </div>
 
@@ -195,7 +219,11 @@
                 <span>and patterns in the</span>
                 <span>raw data</span>
               </p>
-              <p class="solutions-grid-item__link blue-link">Read more</p>
+              <span class="solutions-grid-item__link blue-link">
+                <div class="blue-link-arrow__top-part"></div>
+                <div class="blue-link-arrow__bottom-part"></div>
+                Read more
+              </span>
             </a>
             <a id="embedded_development_button" href="./solutions.html#5" class="solutions-grid-item">
               <p class="solutions-grid-item__caption">Embedded Development</p>
@@ -204,7 +232,11 @@
                 <span>programming for PLCs</span>
                 <span>and other IoT devices</span>
               </p>
-              <p class="solutions-grid-item__link blue-link">Read more</p>
+              <span class="solutions-grid-item__link blue-link">
+                <div class="blue-link-arrow__top-part"></div>
+                <div class="blue-link-arrow__bottom-part"></div>
+                Read more
+              </span>
             </a>
             <a id="data_processing_button" href="./solutions.html#6" class="solutions-grid-item">
               <p class="solutions-grid-item__caption">
@@ -216,7 +248,11 @@
                 <span>establish data flow</span>
                 <span>from field to the cloud</span>
               </p>
-              <p class="solutions-grid-item__link blue-link">Read more</p>
+              <span class="solutions-grid-item__link blue-link">
+                <div class="blue-link-arrow__top-part"></div>
+                <div class="blue-link-arrow__bottom-part"></div>
+                Read more
+              </span>
             </a>
             <a id="visualization_button" href="./solutions.html#7" class="solutions-grid-item">
               <p class="solutions-grid-item__caption">Visualizations and Dashboards</p>
@@ -225,7 +261,11 @@
                 <span>and data exploration</span>
                 <span>tools</span>
               </p>
-              <p class="solutions-grid-item__link blue-link">Read more</p>
+              <span class="solutions-grid-item__link blue-link">
+                <div class="blue-link-arrow__top-part"></div>
+                <div class="blue-link-arrow__bottom-part"></div>
+                Read more
+              </span>
             </a>
           </div>
 
@@ -240,23 +280,43 @@
         <div class="technology-grid">
           <a id="embedded_button" href="./technologies.html#0" class="technology-grid-item">
             <p class="technology-grid-item__caption">Embedded</p>
-            <p class="technology-grid-item__link blue-link">Read more</p>
+            <span class="technology-grid-item__link blue-link">
+              <div class="blue-link-arrow__top-part"></div>
+              <div class="blue-link-arrow__bottom-part"></div>
+              Read more
+            </span>
           </a>
           <a id="computation_button" href="./technologies.html#1" class="technology-grid-item">
             <p class="technology-grid-item__caption">Computation</p>
-            <p class="technology-grid-item__link blue-link">Read more</p>
+            <span class="technology-grid-item__link blue-link">
+              <div class="blue-link-arrow__top-part"></div>
+              <div class="blue-link-arrow__bottom-part"></div>
+              Read more
+            </span>
           </a>
           <a id="storage_button" href="./technologies.html#2" class="technology-grid-item">
             <p class="technology-grid-item__caption">Storage</p>
-            <p class="technology-grid-item__link blue-link">Read more</p>
+            <span class="technology-grid-item__link blue-link">
+              <div class="blue-link-arrow__top-part"></div>
+              <div class="blue-link-arrow__bottom-part"></div>
+              Read more
+            </span>
           </a>
           <a id="modeling_button" href="./technologies.html#3" class="technology-grid-item">
             <p class="technology-grid-item__caption">Modeling</p>
-            <p class="technology-grid-item__link blue-link">Read more</p>
+            <span class="technology-grid-item__link blue-link">
+              <div class="blue-link-arrow__top-part"></div>
+              <div class="blue-link-arrow__bottom-part"></div>
+              Read more
+            </span>
           </a>
           <a id="visualization_technologies_button" href="./technologies.html#4" class="technology-grid-item">
             <p class="technology-grid-item__caption">Visualization</p>
-            <p class="technology-grid-item__link blue-link">Read more</p>
+            <span class="technology-grid-item__link blue-link">
+              <div class="blue-link-arrow__top-part"></div>
+              <div class="blue-link-arrow__bottom-part"></div>
+              Read more
+            </span>
           </a>
         </div>
       </div>
